# Udacity-Android-Class-Sunshine

./: LICENSE  README.md  benchmark_report.csv  benchmark_report.json  docs.md  justfile  metrics_report.json  personas.json  pyproject.toml  ruff.toml
conversation_logs/: anoop.json  daniel_rivera.json  emily_sanders.json  evelyn_tran.json  jamal_thomas.json  kranti_teja.json  kronti_taja.json  marcus_hill.json  mark_chen.json  melissa_carter.json  noname.json  priya_kapoor.json  raghu.json  sanders.json  siv.json  thaduvai_kranthi_teja.json  vishnu_rao.json
rec/: Reluctant_noise.m4a  confused.m4a  coop.m4a  curious_noisy.m4a  distracted.m4a  ex.m4a  frustated_negative.m4a  samp2.m4a  skeptical_distrustful.m4a  traffic.m4a  unclear_noise.m4a
src/battle_test/: cli.py  main.py  utils.py
src/tests/: test_sanity.py
